reconstruct the P3 and P4

--- a/FraudDetectionCpt1.ipynb
+++ b/FraudDetectionCpt1.ipynb
@@ -113,8 +113,6 @@
     "                         , 'merchantState': str, 'merchantZip': str, 'posOnPremises': str, 'recurringAuthInd': str, 'merchantCategoryCode': str, 'transactionDateTime': str\n",
     "                         , 'merchantName': str, 'acqCountry': str, 'merchantCountryCode': str, 'posConditionCode': str, 'posEntryMode': str, 'transactionType': str, 'cardPresent': bool\n",
     "                         , 'isFraud': bool})\n",
-    "# drop the duplicate rows if any since the dataset is synthetic\n",
-    "df.drop_duplicates(inplace=True)\n",
     "df.shape"
    ],
    "id": "b4c9a880c16bd5aa",
@@ -1590,12 +1588,12 @@
     "\n",
     "- The label column has no missing values.\n",
     "- The numerical columns have no missing values.\n",
-    "- The categorical columns have missing values. Given the hidden structure between the categorical features, we'd like to be extra conservative and do missing value imputations univariately and accordingly instead of a universal multivariate approach such as k-NN imputer or iterative imputer.\n",
+    "- The categorical columns have missing values. Given the hidden structure between the categorical features, we'd like to be extra conservative and do missing value retrivals univariately and accordingly instead of a multivariate imputation such as via the k-NN imputer or the iterative imputer.\n",
     " 1. 3.5.1 Drop the six all NaN columns ['echoBuffer', 'merchantCity', 'merchantState', 'merchantZip', 'posOnPremises', 'recurringAuthInd']\n",
-    " 2. 3.5.2 The column ['acqCountry'] has 4562 missing values. The missing seems to be most likely missing not at random(MNAR). The missing values will be imputed by the mode of the rows with the same ['accountNumber','cardLast4Digits'] columns' combination primarily or by ['accountNumber'] column itself secondarily.\n",
-    " 3. 3.5.3 The column ['merchantCountryCode'] has 724 missing values. The missing seems to be most likely missing not at random(MNAR). The missing values will be imputed by the mode of the rows with ['merchantName'] column primarily .\n",
-    " 4. 3.5.4 The column ['transactionType'] has 698 missing values. Due to lack of relative information, we simply label the missing values as 'Unknown' for now. \n",
-    " 5. 3.5.5 The column ['posConditionCode'] has 409 missing values. Due to the contradicting code from transactions made at the same merchant, we simply label the missing values as 'Unknown' for now.\n",
+    " 2. 3.5.2 The column ['acqCountry'] has 4562 missing values. The missing seems to be most likely missing not at random(MNAR). The missing values will be retrieved by the mode of the rows with the same ['accountNumber','cardLast4Digits'] columns' combination primarily or by ['accountNumber'] column itself. In this way, we fill the Nans via linkages within accounts instead of imputation, except for just 1 account. \n",
+    " 3. 3.5.3 The column ['merchantCountryCode'] has 724 missing values. The missing seems to be most likely missing not at random(MNAR). The missing values will be retrieved via linkage within merchant information as well by the mode of the rows with ['merchantName'] column primarily. Like ['acqCountry'], no imputation is needed after we fill the Nans with the information within the ['merchantName'] column.\n",
+    " 4. 3.5.4 The column ['transactionType'] has 698 missing values. Due to lack of other transaction related information and avoiding any arbitrariness, we simply label the missing values as 'Unknown' for now. \n",
+    " 5. 3.5.5 The column ['posConditionCode'] has 409 missing values. Due to the contradicting code from transactions made at the same merchant and avoiding any arbitrariness, we simply label the missing values as 'Unknown' for now.\n",
     " 6. 3.5.6 The column ['posEntryMode'] has 4054 missing values. Due to the same reason as column ['posConditionCode'], we simply label the missing values as 'Unknown' for now.  "
    ],
    "id": "636be84195ad74c9"
@@ -2746,11 +2744,11 @@
    "source": [
     "## 3.6 Feature Preprocessing\n",
     "\n",
-    "The as-is dataset has 3 numerical features and 25 non-numerical features, 4 datetime, 21 categorical/boolean. The post-preprocessed dataset will have 6 numerical features and 17 categorical features after we discard the non-informative columns and re-construct the verbose ones.\n",
+    "The as-is dataset has 3 numerical features,  4 datetime features and 21 categorical/boolean features. The post-preprocessed dataset will have 6 numerical features, 1 datetime features and 18 categorical/boolean features and 1 after we discard the non-informative columns and re-construct the verbose ones.\n",
     "\n",
     "1. Note the ['accountNumber'] and ['customerId'] columns are identical. We will drop the customerId column.\n",
     "2. The column ['currentExpDate'] is a string column in format mm/yy. We will convert it to a datetime object by impute them to the last day of the month. We first convert to the 1st day of the month, then add 1 month and subtract 1 day, finally convert it to datetime objects.\n",
-    "3. Extract the 'x_hour', 'x_day_of_week', 'x_day_of_month', 'x_month', 'x_year', 'day_since_open', 'day_since_update_add', and 'day_2_exp' from the existing columns and drop the original ones.\n",
+    "3. Extract the 'x_min', 'x_hour', 'x_day_of_week', 'x_day_of_month', 'x_month', 'x_year', 'day_since_open', 'day_since_update_add', and 'day_2_exp' from the existing columns and drop the original ones.\n",
     "4. Coalesce the information contained in ['cardCVV', 'enteredCVV'] columns to a new categorical ['mismatchInCVV'] column showing the number of mismatches by comparing the 3 integers in each row of the two aforementioned columns. And we restrain from diving into the analysis of which of the integers cause mismatches for now.\n",
     "5. Truncate the ['merchantName'] starting from the first #, reducing the number of merchants from 2489 to 205. __Maybe we can further reduce the number of merchants by grouping the tail 20% as \"Rest\"__.\n",
     "6. Since the ['currentBalance'] is just the ['creditLimit'] minus the ['availableMoney'], they are highly linearly correlated by definition. So, let us replace the ['currentBalance'] column by defining a new column ['creditUtilizationRate'] as the ratio of ['currentBalance'] with respect to ['creditLimit'].\n",
@@ -2802,7 +2800,8 @@
    },
    "cell_type": "code",
    "source": [
-    "# 3. extract the 'x_hr', 'x_d', 'x_DOW', 'x_mon', 't_since_open', 't_since_update_add', and 't_2_exp' from the existing columns and drop the original ones. We don't extract the 'x_yr' since all the transactions are from 2016.\n",
+    "# 3. extract the 'x_min','x_hr', 'x_d', 'x_DOW', 'x_mon', 't_since_open', 't_since_update_add', and 't_2_exp' from the existing columns and drop the original ones. We don't extract the 'x_yr' since all the transactions are from 2016.\n",
+    "df['x_min'] = df['transactionDateTime'].dt.minute\n",
     "df['x_hr'] = df['transactionDateTime'].dt.hour\n",
     "df['x_d'] = df['transactionDateTime'].dt.day\n",
     "df['x_DOW'] = df['transactionDateTime'].dt.dayofweek\n",
@@ -2811,8 +2810,8 @@
     "df['t_since_open'] = (df['transactionDateTime'] - df['accountOpenDate']).dt.days\n",
     "df['t_since_update_add'] = (df['transactionDateTime'] - df['dateOfLastAddressChange']).dt.days\n",
     "df['t_2_exp'] = (df['currentExpDate'] - df['transactionDateTime']).dt.days\n",
-    "# drop the original columns\n",
-    "df.drop(columns=['accountOpenDate', 'dateOfLastAddressChange', 'transactionDateTime', 'currentExpDate'], inplace=True)"
+    "# drop the original columns but the 'transactionDateTime'\n",
+    "df.drop(columns=['accountOpenDate', 'dateOfLastAddressChange', 'currentExpDate'], inplace=True)"
    ],
    "id": "78e3c69109fbb588",
    "outputs": [],
@@ -2918,6 +2917,33 @@
    "execution_count": 58
   },
   {
+   "metadata": {},
+   "cell_type": "markdown",
+   "source": [
+    "## 3.7 Duplicate rows/transactions check\n",
+    "\n",
+    "- There are no strict duplicate rows in the dataset.\n",
+    "- "
+   ],
+   "id": "5cf7bb8743455c94"
+  },
+  {
+   "metadata": {},
+   "cell_type": "code",
+   "outputs": [],
+   "execution_count": null,
+   "source": "",
+   "id": "1429b9ad467cb4b4"
+  },
+  {
+   "metadata": {},
+   "cell_type": "code",
+   "outputs": [],
+   "execution_count": null,
+   "source": "",
+   "id": "477ca4e94cc35064"
+  },
+  {
    "metadata": {
     "ExecuteTime": {
      "end_time": "2024-08-10T03:00:27.949842Z",
@@ -2971,21 +2997,16 @@
    "id": "15de7d3d39d07db6"
   },
   {
-   "metadata": {
-    "ExecuteTime": {
-     "end_time": "2024-08-10T03:11:34.029010Z",
-     "start_time": "2024-08-10T03:11:32.074012Z"
-    }
-   },
-   "cell_type": "code",
+   "metadata": {},
+   "cell_type": "markdown",
    "source": [
-    "# read the preprocessed data from the .csv file, make sure the following columns are strings: ['accountNumber', 'cardLast4Digits', 'creditLimit', 'acqCountry', 'transactionType', 'merchantName', 'merchantCountryCode', 'merchantCategoryCode', 'posEntryMode', 'posConditionCode'], the following columns are integers: ['isFraud', 'cardPresent', 'expirationDateKeyInMatch', 'mismatchInCVV', 'x_hr', 'x_d', 'x_DOW', 'x_mon', 'x_yr', 't_since_open', 't_since_update_add', 't_2_exp'], the following columns are floats: [ 'availableMoney', 'transactionAmount', 'currentBalance'], the rest columns are \n",
-    "df = pd.read_csv('transactions/transactions_preprocessed.csv', dtype={'accountNumber': str, 'cardLast4Digits': str, 'creditLimit': str, 'acqCountry': str, 'transactionType': str, 'merchantName': str, 'merchantCountryCode': str, 'merchantCategoryCode': str, 'posEntryMode': str, 'posConditionCode': str, 'isFraud': int, 'cardPresent': str, 'expirationDateKeyInMatch': str, 'mismatchInCVV': str, 'x_hr': str, 'x_d': str, 'x_DOW': str, 'x_mon': str, 'x_yr': str, 't_since_open': int, 't_since_update_add': int, 't_2_exp': int})\n",
-    "x_num_original = pd.read_csv('transactions/x_num_original.csv')"
+    "## 4.1 Summary Statistics\n",
+    "- The as-is dataset has 786,363 rows/transactions and 29 columns/features, including 3 numerical features, 4 datetime features and 21 categorical/boolean features.\n",
+    "- The post-preprocessed dataset has 786,352 rows/transactions and 29 columns/features, including 6 numerical features, 1 datetime features and 18 categorical/boolean features. 11 rows are dropped due to having overly large transaction amount (> $1,680) as outliers.\n",
+    "- There are 773935 legitimate/non-fraud transactions or 98.42% of the target labels.\n",
+    "- There are 12,417 fraudulent transactions or 1.58% of the target labels."
    ],
-   "id": "c87dfd4841280fa2",
-   "outputs": [],
-   "execution_count": 70
+   "id": "8d6a42f58c43af1f"
   },
   {
    "metadata": {
@@ -2995,7 +3016,12 @@
     }
    },
    "cell_type": "code",
-   "source": "df.head()",
+   "source": [
+    "# read the preprocessed data from the .csv file, make sure the following columns are strings: ['accountNumber', 'cardLast4Digits', 'creditLimit', 'acqCountry', 'transactionType', 'merchantName', 'merchantCountryCode', 'merchantCategoryCode', 'posEntryMode', 'posConditionCode'], the following columns are integers: ['isFraud', 'cardPresent', 'expirationDateKeyInMatch', 'mismatchInCVV', 'x_hr', 'x_d', 'x_DOW', 'x_mon', 'x_yr', 't_since_open', 't_since_update_add', 't_2_exp'], the following columns are floats: [ 'availableMoney', 'transactionAmount', 'currentBalance'], the rest columns are \n",
+    "df = pd.read_csv('transactions/transactions_preprocessed.csv', dtype={'accountNumber': str, 'cardLast4Digits': str, 'creditLimit': str, 'acqCountry': str, 'transactionType': str, 'merchantName': str, 'merchantCountryCode': str, 'merchantCategoryCode': str, 'posEntryMode': str, 'posConditionCode': str, 'isFraud': int, 'cardPresent': str, 'expirationDateKeyInMatch': str, 'mismatchInCVV': str, 'x_hr': str, 'x_d': str, 'x_DOW': str, 'x_mon': str, 'x_yr': str, 't_since_open': int, 't_since_update_add': int, 't_2_exp': int})\n",
+    "x_num_original = pd.read_csv('transactions/x_num_original.csv')\n",
+    "df.head()"
+   ],
    "id": "74df0e36d42343bb",
    "outputs": [
     {
@@ -3440,7 +3466,7 @@
    "metadata": {},
    "cell_type": "markdown",
    "source": [
-    "## 4.1 Numerical Features\n",
+    "## 4.2 Numerical Features\n",
     "\n",
     "1. Let's first demonstrate the distributions of the numerical features in the as-is dataset by fraud or not.\n",
     "2. Let's then show the distributions of the numerical features after the preliminary feature engineering."
@@ -3451,7 +3477,7 @@
    "metadata": {},
    "cell_type": "markdown",
    "source": [
-    "### 4.1.1 As-is dataset numerical features\n",
+    "### 4.2.1 As-is dataset numerical features\n",
     "Via the grouped violin plots, we can see that the fraudulent transactions have a wider range of 'transactionAmount' and 'availableMoney' than the non-fraudulent transactions. The 'currentBalance' of the fraudulent transactions is more concentrated around 0 than the non-fraudulent transactions."
    ],
    "id": "bed907836e34323"
@@ -3465,7 +3491,7 @@
    },
    "cell_type": "code",
    "source": [
-    "## 4.1.1 Numerical Features in the as-is dataset\n",
+    "## 4.2.1 Numerical Features in the as-is dataset\n",
     "# Violin plot of the x_num_y numerical features grouped by the label column, and use the gap parameter to make the violins' verticle lines overlap\n",
     "x_num_original_y = pd.concat([x_num_original, y], axis=1)\n",
     "fig, ax = plt.subplots(1,3, figsize=(18,6))\n",
@@ -3552,7 +3578,7 @@
    "metadata": {},
    "cell_type": "markdown",
    "source": [
-    "### 4.1.2 Post feature preprocessing numerical features\n",
+    "### 4.2.2 Post feature preprocessing numerical features\n",
     "\n",
     "Since the currentBalance is just the creditLimit minus the availableMoney, they are highly linearly correlated by definition. So, we might not toss all of them into the models. Also, let us use a new column ['creditUtilizationRate'] as the ratio of ['currentBalance'] with respect to ['creditLimit'] to replace the ['currentBalance'] column. Similarly, we use a new column ['availableMoneyRate'] as the ratio of ['availableMoney'] with respect to ['creditLimit'] to replace the ['currentBalance'] column. In addition, we have the columns ['t_since_open', 't_since_update_add', 't_2_exp'] in days defined during the feature preprocessing. Finally, we normalize the numerical features by the MinMaxScaler. Then violin plot the normalized numerical features grouped by the label column."
    ],
@@ -3598,6 +3624,14 @@
     }
    ],
    "execution_count": 75
+  },
+  {
+   "metadata": {},
+   "cell_type": "code",
+   "outputs": [],
+   "execution_count": null,
+   "source": "??zheli add comments on the plots",
+   "id": "74f6aebdcd135858"
   },
   {
    "metadata": {},
@@ -3779,7 +3813,7 @@
    "metadata": {},
    "cell_type": "markdown",
    "source": [
-    "## 4.2 Categorical Features\n",
+    "## 4.3 Categorical Features\n",
     "Lets check the cardinality of the categorical features, and then analyze the account oriented features, ['accountNumber', 'cardLast4Digits', 'creditLimit', 'acqCountry'], and the transaction oriented features, ['merchantName', 'merchantCountryCode', 'merchantCategoryCode', 'posEntryMode', 'posConditionCode', 'transactionType', 'cardPresent', 'expirationDateKeyInMatch', 'mismatchInCVV', 'x_hr', 'x_d', 'x_DOW', 'x_mon'].\n",
     "We might consider all non-US countries as one category, and all non-US merchants as one category, or delete all non-US accounts. "
    ],
@@ -3828,8 +3862,16 @@
   },
   {
    "metadata": {},
+   "cell_type": "code",
+   "outputs": [],
+   "execution_count": null,
+   "source": "do transaction type first, then account oriented",
+   "id": "33fb698fd25bcd34"
+  },
+  {
+   "metadata": {},
    "cell_type": "markdown",
-   "source": "### 4.2.1 Account oriented features analysis, ['accountNumber', 'cardLast4Digits', 'creditLimit', 'acqCountry']. ",
+   "source": "### 4.3.1 Account oriented features analysis, ['accountNumber', 'cardLast4Digits', 'creditLimit', 'acqCountry']. ",
    "id": "b6ff530a7f5b5dc3"
   },
   {
@@ -5675,7 +5717,7 @@
    "cell_type": "code",
    "outputs": [],
    "execution_count": null,
-   "source": "",
+   "source": "SVM 来做 benchmark",
    "id": "bccd7a838208022c"
   },
   {
