--- a/FraudDetectionCpt1.ipynb
+++ b/FraudDetectionCpt1.ipynb
@@ -3996,7 +3996,7 @@
    "id": "7ee79ec2437ff9ec",
    "metadata": {},
    "source": [
-    "## 4.3 Categorical Features\n",
+    "## 4.4 Categorical Features\n",
     "Let's break down the analsis into 4 sub-blocks,  the transaction oriented features ['transactionType', 'posEntryMode', 'posConditionCode',  'cardPresent', 'expirationDateKeyInMatch', 'mismatchInCVV'], the account oriented features ['accountNumber', 'cardLast4Digits', 'creditLimit', 'acqCountry'], the merchant oriented features ['merchantName', 'merchantCountryCode', 'merchantCategoryCode'], and the time oriented features ['x_min', 'x_hr', 'x_d', 'x_DOW', 'x_mon']."
    ]
   },
@@ -4020,7 +4020,7 @@
     "    ax.bar_label(container=ax.containers[0], labels=lbls)\n",
     "    ax.set_ylabel('Count')\n",
     "    ax.set_title(title)\n",
-    "    plt.show()\n"
+    "    plt.show()"
    ]
   },
   {
@@ -4028,7 +4028,7 @@
    "id": "30658da3b73d733e",
    "metadata": {},
    "source": [
-    "### 4.3.1 Transaction oriented features analysis, ['transactionType', 'posEntryMode', 'posConditionCode',  'cardPresent', 'expirationDateKeyInMatch'].\n"
+    "### 4.4.1 Transaction oriented features analysis, ['transactionType', 'posEntryMode', 'posConditionCode',  'cardPresent', 'expirationDateKeyInMatch'].\n"
    ]
   },
   {
@@ -4076,7 +4076,7 @@
    "id": "9b194fd95b5dcf72",
    "metadata": {},
    "source": [
-    "#### 4.3.1.1 transactionType\n",
+    "#### 4.4.1.1 transactionType\n",
     "It originally contains 3 types, 'purchase', 'reversal', and 'address_verification'. We then label the missing ones as new type 'unknown'. The count plot by fraud(orange) or legitimate(blue) for each type is presented below along with the type-wise count and fraud rate on top of each bar. To our amaze, we find the 'address_verification' transactions' fraud rate are 60% less than the average, whereas the 'Unknown' transactions' fraud rate is 25% higher than the average. The 'purchase' and 'reversal' transactions' fraud rate are on par with the average.\n",
     "- Q: What are the typical transaction types for the fraudulent transactions?\n",
     "- A: The fraudulent transactions are mostly 'PURCHASE' and 'ADDRESS_VERIFICATION'."
@@ -4115,7 +4115,7 @@
    "id": "b960ab648d0fa82b",
    "metadata": {},
    "source": [
-    "#### 4.3.1.2 posEntryMode\n",
+    "#### 4.4.1.2 posEntryMode\n",
     "posEntryMode - It is the two-digit code identifies the actual method used to enter the cardholder account number and card expiration date originally contains 5 types:\n",
     "\n",
     "- 02 -- Magnetic stripe,\n",
@@ -4155,7 +4155,7 @@
    "id": "19862c9a13a7b96b",
    "metadata": {},
    "source": [
-    "#### 4.3.1.3 posConditionCode\n",
+    "#### 4.4.1.3 posConditionCode\n",
     "\n",
     "posConditionCode - It is a code identifying transaction conditions at the point-of-sale or point-of-service\n",
     "\n",
@@ -4206,7 +4206,7 @@
    "id": "910aa26500f0801e",
    "metadata": {},
    "source": [
-    "#### 4.3.1.4 cardPresent\n",
+    "#### 4.4.1.4 cardPresent\n",
     "\n",
     "The count plot by fraud(orange) or legitimate(blue) for each type is presented below along with the type-wise count and fraud rate on top of each bar. We find when card is present, the fraud rate is 40% below the average fraud rate level, whereas the fraud rate is 25% higher than the average when card is not present."
    ]
@@ -4244,7 +4244,7 @@
    "id": "5c26c20523cf2bd9",
    "metadata": {},
    "source": [
-    "#### 4.3.1.5 expirationDateKeyInMatch\n",
+    "#### 4.4.1.5 expirationDateKeyInMatch\n",
     "The term \"expirationdatekeyinmatch\" typically refers to a situation where a system or software prompts a user to input or match an expiration date for verification or authentication purposes. It could be part of a security protocol where a user is required to enter a specific expiration date associated with a card, document, or other credential to confirm its validity or access rights. This term is commonly used in contexts such as payment processing, access control systems, or any situation where validating the expiration of a document or credential is necessary.\n",
     "The count plot by fraud(orange) or legitimate(blue) for each type is presented below along with the type-wise count and fraud rate on top of each bar. We find when match is prompted, the fraud rate is 20% below the average fraud rate level, whereas the fraud rate remains unchanged when the match is not prompted."
    ]
@@ -4288,7 +4288,7 @@
    "id": "865175dd",
    "metadata": {},
    "source": [
-    "#### 4.3.1.6 mismatchInCVV\n",
+    "#### 4.4.1.6 mismatchInCVV\n",
     "We coalesce the information contained in ['cardCVV', 'enteredCVV'] columns to a new categorical ['mismatchInCVV'] column showing the number of mismatches by comparing the 3 integers in each row of the two aforementioned columns. And we discover that different counts of mismatch actually correspond to different levels in fraud rates, albeit they are all higher than normal."
    ]
   },
@@ -4321,7 +4321,7 @@
    "id": "b6ff530a7f5b5dc3",
    "metadata": {},
    "source": [
-    "### 4.3.2 Account oriented features analysis, ['accountNumber', 'cardLast4Digits', 'creditLimit', 'acqCountry']. \n",
+    "### 4.4.2 Account oriented features analysis, ['accountNumber', 'cardLast4Digits', 'creditLimit', 'acqCountry']. \n",
     "The account oriented features have high cardinalities in the accountNumber and cardLast4Digits, we will use histograms and tables to demonstrate their distributions. In addtion, We could use the bar plots to show the distributions of the low cardinalitied categorical features creditLimit and acqCountry."
    ]
   },
@@ -4355,7 +4355,7 @@
    "id": "6e696af6",
    "metadata": {},
    "source": [
-    "#### 4.3.2.1 accountNumber"
+    "#### 4.4.2.1 accountNumber"
    ]
   },
   {
@@ -5593,7 +5593,7 @@
    "id": "908e2de97ddd0473",
    "metadata": {},
    "source": [
-    "#### 4.3.2.2 cardLast4Digits\n",
+    "#### 4.4.2.2 cardLast4Digits\n",
     "- The last four digits of a 16-digit credit card number serve as a **check digit**. This digit is used to verify that the card number is legitimate. When your credit card is processed, a system called the **Luhn algorithm** uses this check digit to ensure the validity of your card¹. It's a clever way to prevent errors and detect potential issues during transactions. \n",
     "- Some cardLast4Digits only have 3 digits. But it is a legitimate situation, because the last digit, a.k.a **checksum digit** will be decied by the frist 15 digits via the **Luhn algorithm**.\n",
     "- Some accounts have more than 1 cardLastDigits, it is likely an account that has multiple authorised user cards.\n",
@@ -5649,115 +5649,6 @@
    "outputs": [],
    "source": [
     "a = df[df['accountNumber'].isin(acct_6_checkdigits)]"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 55,
-   "id": "5c0a02ea",
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "       accountNumber creditLimit  transactionDateTime  transactionAmount  \\\n",
-      "743075     623206848       10000  2016-01-16 01:06:20             271.62   \n",
-      "743076     623206848       10000  2016-01-23 00:13:36             257.86   \n",
-      "743077     623206848       10000  2016-01-27 00:09:57              29.65   \n",
-      "743078     623206848       10000  2016-01-29 14:17:17              10.07   \n",
-      "743079     623206848       10000  2016-02-05 23:58:01              62.48   \n",
-      "...              ...         ...                  ...                ...   \n",
-      "743118     623206848       10000  2016-12-14 23:50:45              24.72   \n",
-      "743119     623206848       10000  2016-12-16 03:09:23             215.77   \n",
-      "743120     623206848       10000  2016-12-18 06:50:27              61.06   \n",
-      "743121     623206848       10000  2016-12-18 10:35:54             123.82   \n",
-      "743122     623206848       10000  2016-12-24 02:41:49              20.41   \n",
-      "\n",
-      "         merchantName acqCountry merchantCountryCode     posEntryMode  \\\n",
-      "743075           Uber         US                  US     09-Ecommerce   \n",
-      "743076           Uber         US                  US          05-Chip   \n",
-      "743077           Uber         US                  US     02-Magstripe   \n",
-      "743078     Walgreens          US                  US          05-Chip   \n",
-      "743079           Lyft         US                  US     02-Magstripe   \n",
-      "...               ...        ...                 ...              ...   \n",
-      "743118  EZ Putt Putt          US                  US  90-MagtripW/CVV   \n",
-      "743119  EZ Putt Putt          US                  US     09-Ecommerce   \n",
-      "743120     Mobil Gas          US                  US     09-Ecommerce   \n",
-      "743121          NYSC          US                  US     09-Ecommerce   \n",
-      "743122       hulu.com         US                  US     09-Ecommerce   \n",
-      "\n",
-      "          posConditionCode  merchantCategoryCode cardLast4Digits  \\\n",
-      "743075  01-HolderUnpresent             rideshare             395   \n",
-      "743076  01-HolderUnpresent             rideshare             395   \n",
-      "743077  01-HolderUnpresent             rideshare             395   \n",
-      "743078  01-HolderUnpresent                health            7193   \n",
-      "743079  01-HolderUnpresent             rideshare            7193   \n",
-      "...                    ...                   ...             ...   \n",
-      "743118  01-HolderUnpresent         entertainment            7193   \n",
-      "743119  01-HolderUnpresent         entertainment            9562   \n",
-      "743120  01-HolderUnpresent                  fuel            2311   \n",
-      "743121  01-HolderUnpresent                health             395   \n",
-      "743122                  99  online_subscriptions            2311   \n",
-      "\n",
-      "       transactionType  ... x_DOW x_mon  t_since_open  t_since_update_add  \\\n",
-      "743075        PURCHASE  ...     5     1          1042                1042   \n",
-      "743076        PURCHASE  ...     5     1          1049                1049   \n",
-      "743077        PURCHASE  ...     2     1          1053                1053   \n",
-      "743078        PURCHASE  ...     4     1          1055                1055   \n",
-      "743079        PURCHASE  ...     4     2          1062                1062   \n",
-      "...                ...  ...   ...   ...           ...                 ...   \n",
-      "743118        PURCHASE  ...     2    12          1375                1375   \n",
-      "743119        PURCHASE  ...     4    12          1377                1377   \n",
-      "743120        PURCHASE  ...     6    12          1379                1379   \n",
-      "743121        PURCHASE  ...     6    12          1379                1379   \n",
-      "743122        PURCHASE  ...     5    12          1385                1385   \n",
-      "\n",
-      "       t_2_exp mismatchInCVV creditUtilizationRate availableMoneyRate  \\\n",
-      "743075    1535             0              0.000000           1.000000   \n",
-      "743076    2533             0              0.027162           0.972838   \n",
-      "743077    6182             0              0.052948           0.947052   \n",
-      "743078    4597             0              0.055913           0.944087   \n",
-      "743079    1668             0              0.054420           0.945580   \n",
-      "...        ...           ...                   ...                ...   \n",
-      "743118    4703             0              0.321842           0.678158   \n",
-      "743119    2509             0              0.324314           0.675686   \n",
-      "743120    1198             0              0.345891           0.654109   \n",
-      "743121    4941             0              0.351997           0.648003   \n",
-      "743122    2197             0              0.364379           0.635621   \n",
-      "\n",
-      "        transactionAmount_norm  t_since_open_norm  t_since_update_add_norm  \\\n",
-      "743075                0.168881           0.104215                 0.104304   \n",
-      "743076                0.160326           0.104915                 0.105005   \n",
-      "743077                0.018435           0.105316                 0.105405   \n",
-      "743078                0.006261           0.105516                 0.105606   \n",
-      "743079                0.038847           0.106217                 0.106306   \n",
-      "...                        ...                ...                      ...   \n",
-      "743118                0.015370           0.137551                 0.137638   \n",
-      "743119                0.134156           0.137752                 0.137838   \n",
-      "743120                0.037964           0.137952                 0.138038   \n",
-      "743121                0.076986           0.137952                 0.138038   \n",
-      "743122                0.012690           0.138552                 0.138639   \n",
-      "\n",
-      "       t_2_exp_norm  \n",
-      "743075     0.082151  \n",
-      "743076     0.268484  \n",
-      "743077     0.949776  \n",
-      "743078     0.653846  \n",
-      "743079     0.106983  \n",
-      "...             ...  \n",
-      "743118     0.673637  \n",
-      "743119     0.264003  \n",
-      "743120     0.019231  \n",
-      "743121     0.718073  \n",
-      "743122     0.205751  \n",
-      "\n",
-      "[48 rows x 30 columns]\n"
-     ]
-    }
-   ],
-   "source": [
-    "print(a)"
    ]
   },
   {
@@ -5935,7 +5826,7 @@
    "id": "4757edd442596bfb",
    "metadata": {},
    "source": [
-    "#### 4.3.2.3 creditLimit\n",
+    "#### 4.4.2.3 creditLimit\n",
     "Next, we show the distribution of the 'creditLimit' column by the label column. "
    ]
   },
@@ -5990,7 +5881,7 @@
    "id": "a258a59f7adfb02e",
    "metadata": {},
    "source": [
-    "#### 4.3.2.4 acqCountry\n",
+    "#### 4.4.2.4 acqCountry\n",
     "We might consider all non-US countries as one category, and all non-US merchants as one category, or delete all non-US accounts. "
    ]
   },
@@ -6007,8 +5898,8 @@
    "id": "d08b2baa88478d27",
    "metadata": {},
    "source": [
-    "### 4.3.3 Merchant oriented features ['merchantName', 'merchantCountryCode', 'merchantCategoryCode']\n",
-    "### 4.3.3.1 merchantName"
+    "### 4.4.3 Merchant oriented features ['merchantName', 'merchantCountryCode', 'merchantCategoryCode']\n",
+    "### 4.4.3.1 merchantName"
    ]
   },
   {
@@ -6116,7 +6007,7 @@
    "id": "beddb41d40e34779",
    "metadata": {},
    "source": [
-    " ### 4.3.4 Time oriented features ['x_min', 'x_hr', 'x_d', 'x_DOW', 'x_mon'].\n"
+    " ### 4.4.4 Time oriented features ['x_min', 'x_hr', 'x_d', 'x_DOW', 'x_mon'].\n"
    ]
   },
   {
